--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "@tanstack/react-query": "4.0.10",
     "@types/jest": "28.1.6",
     "@types/node": "14.18.23",
     "@types/react": "18.0.15",
