--- a/package.json
+++ b/package.json
@@ -6,14 +6,18 @@
   "main": "src/index.js",
   "dependencies": {
     "@tanstack/react-query": "4.0.10",
+    "@tanstack/react-query-devtools": "4.0.10",
     "@types/jest": "28.1.6",
     "@types/node": "14.18.23",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
     "@types/react-router-dom": "5.3.3",
     "@types/styled-components": "5.1.25",
+    "apexcharts": "3.35.4",
     "react": "18.0.0",
+    "react-apexcharts": "1.4.0",
     "react-dom": "18.0.0",
+    "react-query": "4.0.0",
     "react-router-dom": "6.3.0",
     "react-scripts": "4.0.0",
     "styled-components": "5.3.5"
