--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "@types/node": "14.18.23",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
+    "@types/react-helmet": "6.1.5",
     "@types/react-router-dom": "5.3.3",
     "@types/styled-components": "5.1.25",
     "apexcharts": "3.35.4",
     "react": "18.0.0",
     "react-apexcharts": "1.4.0",
     "react-dom": "18.0.0",
+    "react-helmet": "6.1.0",
     "react-query": "4.0.0",
     "react-router-dom": "6.3.0",
     "react-scripts": "4.0.0",
