--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-query": "4.0.0",
     "react-router-dom": "6.3.0",
     "react-scripts": "4.0.0",
+    "recoil": "0.7.4",
     "styled-components": "5.3.5"
   },
   "devDependencies": {
